<resources>
    <string name="app_name">Image Editor</string>
    <string name="menu">Menu</string>
    <string name="select_image">Select image</string>
    <string name="open_camera">Open camera</string>
    <string name="save">Save</string>
    <string name="flip">Flip</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="resize">Resize</string>
    <string name="image_preview">Image preview</string>
    <string name="select_picture">Select Picture</string>
    <string name="custom_picker">Custom picker</string>
    <string name="check">Check</string>
    <string name="folder_name">ImageEditor</string>
    <string name="save_error">Save error.</string>
    <string name="image_was_saved">Image was saved.</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
</resources>