<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    style="@style/bottom_sheet_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="90dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        style="@style/bottom_sheet_menu_text"
        android:text="@string/menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <include layout="@layout/separator"/>

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/select_image_bottom_sheet"
        style="@style/bottom_sheet_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/select_image"/>

    <TextView
        android:id="@+id/open_camera_bottom_sheet"
        style="@style/bottom_sheet_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/open_camera" />

    <TextView
        android:id="@+id/save_image_bottom_sheet"
        style="@style/bottom_sheet_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/save" />
</LinearLayout>