<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_menu_panel"
    style="@style/bottom_menu"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="4"
    android:layout_height="52dp">

    <ImageView
        android:id="@+id/flip_bottom_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/ripple_small"
        android:contentDescription="@string/flip"
        android:src="@drawable/flip" />

    <ImageView
        android:id="@+id/rotate_left_bottom_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/ripple_small"
        android:contentDescription="@string/rotate_left"
        android:src="@drawable/rotate_left" />

    <ImageView
        android:id="@+id/rotate_right_bottom_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/ripple_small"
        android:contentDescription="@string/rotate_right"
        android:src="@drawable/rotate_right" />

    <ImageView
        android:id="@+id/resize_bottom_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/ripple_small"
        android:contentDescription="@string/resize"
        android:src="@drawable/resize" />

</LinearLayout>